# Quizz

./: .gitignore  CONTRIBUTING.md  Package.swift  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  windows-build.yml
Localizations/en.lproj/: Localizable.strings
Localizations/vi.lproj/: Localizable.strings
Localizations/zh-Hans.lproj/: Localizable.strings
Localizations/zh-Hant.lproj/: Localizable.strings
Sources/AgentPetCore/: AgentCatalog.swift  AgentSession.swift  AntigravityHookPayload.swift  SessionArchive.swift  SessionArchiveStore.swift  TranscriptReader.swift
Sources/App/: AgentIcons.swift  AgentPetApp.swift  AppDaemon.swift  AppEntry.swift  AppLanguage.swift  BreakReminderController.swift  (+44 more)
_backup_webshell/: Package.swift.webshell  main.swift.webshell
app/: index.html  overlay.html  pet-sprite.js  pet-sprite.test.js  quiz-core.test.js  quiz-store.test.js  settings.html
cdn-proxy/: worker.js  wrangler.toml
docs/: appcast.xml  index.html
landing/: PET-GALLERY-SETUP.md  app.css  index.html  migrate-prod.sql  wrangler.toml
scripts/: AppInfo.plist  build-app.sh  ci-dmg.sh  make-announce-190.swift  make-announce.swift  make-banner.swift  make-icon.swift  release.sh
web/: wrangler.jsonc
windows/: PARITY.md  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/icons/: icon.icns
windows/src-tauri/src/: cli.rs  lib.rs  main.rs
(+132 files in other folders)
