[package]
name = "quiz"
version = "0.1.2"
description = "Quiz for Windows"
authors = ["billy"]
edition = "2021"

[lib]
name = "quiz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
